added new arno story splat

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
         <div class="card">
             <a href="pages/jaleels-room-story-splat.html">Jaleels Room</a>
         </div>
+        <div class="card">
+            <a href="pages/florence-arno-statue-story-splat.html">Jaleels Room</a>
+        </div>
         <!-- Add more cards as needed -->
+
     </div>
 
     <footer>
