--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <a href="pages/jaleels-room-story-splat.html">Jaleels Room</a>
         </div>
         <div class="card">
-            <a href="pages/florence-arno-statue-story-splat.html">Jaleels Room</a>
+            <a href="pages/florence-arno-statue-story-splat.html">Florence Arno Statue Story Splat</a>
         </div>
         <!-- Add more cards as needed -->
 
