--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         <div class="card">
             <a href="pages/florence-arno-statue-story-splat.html">Florence Arno Statue Story Splat</a>
         </div>
+           <div class="card">
+            <a href="pages/golfGameDemo.html">Florence Arno Statue Story Splat</a>
+        </div>
         <!-- Add more cards as needed -->
 
     </div>
