--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <a href="pages/florence-arno-statue-story-splat.html">Florence Arno Statue Story Splat</a>
         </div>
            <div class="card">
-            <a href="pages/golfGameDemo.html">Florence Arno Statue Story Splat</a>
+            <a href="pages/golfGameDemo.html">Golf Babylon Demo</a>
         </div>
         <!-- Add more cards as needed -->
 
