--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
            <div class="card">
             <a href="pages/golfGameDemo.html">Golf Babylon Demo</a>
         </div>
+        <div class="card">
+            <a href="pages/skiGameDemo.html">Ski/Tubing Babylon Demo</a>
+        </div>
+
+        
         <!-- Add more cards as needed -->
 
     </div>
