--- a/index.html
+++ b/index.html
@@ -99,10 +99,7 @@
     <div class="container">
         <!-- Repeat this block for each page in the subdirectory -->
         <div class="card">
-            <a href="pages/jaleels-room-story-splat.html">Jaleels Room</a>
-        </div>
-        <div class="card">
-            <a href="pages/florence-arno-statue-story-splat.html">Florence Arno Statue Story Splat</a>
+            <a href="https://underwaterfirefighting.netlify.app/">Underwater Firefighter</a>
         </div>
            <div class="card">
             <a href="pages/golfGameDemo.html">Golf Babylon Demo</a>
