--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@
         <div class="card">
             <a href="pages/skiGameDemo.html">SKI BABYLON</a>
         </div>
-        
+        <div class="card">
+            <a href="https://shared-sharpie-wall.onrender.com">DRAW TOGETHER</a>
+        </div>
     </div>
 
     <footer>
